--- a/square-root/src/pages/User/Projects/projects.css
+++ b/square-root/src/pages/User/Projects/projects.css
@@ -21,6 +21,7 @@
   height: 100%;
   position: absolute;
   color: var(--mainBlack);
+  
 }
 
 .left {
@@ -70,6 +71,7 @@
   padding-left: 5%;
   position: absolute;
   height: 100%;
+  color: var(--mainBlack);
 }
 
 .p-h1 {
@@ -77,13 +79,15 @@
   font-family: "Montserrat", sans-serif;
   font-weight: 400;
   font-size: x-large;
+  color: var(--mainBlack);
 }
 
 .p-h2 {
   display: inline;
   font-family: "Montserrat", sans-serif;
-  font-weight: 300;
+  font-weight: 400;
   font-size: medium;
+  color: var(--mainBlack);
 }
 /* end of TITLE */
 
@@ -93,24 +97,25 @@
   width: 100%;
   border-collapse: separate;
   padding-top: 5%;
+  color: var(--mainBlack);
+  border-spacing: 0 10px;
+  
 }
 
 .p-th {
   font-weight: 500;
   padding: 15px;
   text-align: left;
+  color: var(--mainBlack);
+  font-weight: 500;
 }
 
 .p-td {
-  font-weight: 300;
   background-color: #ffffff;
   padding: 15px;
+  color: var(--mainBlack);
+  font-weight: 400;
 }
-
-#projects-table {
-  border-spacing: 0 10px;
-}
-
 /* end of TABLE */
 
 /* BUTTON : NEW PROJECT*/
@@ -118,17 +123,19 @@
   padding: 15px 10px;
   background-color: #d0e2b0;
   font-family: "Montserrat", sans-serif;
-  font-weight: 300;
+  font-weight: 500;
   border: none;
   border-radius: 5px;
   float: right;
   cursor: pointer;
   font-size: 12px;
+ color: var(--mainBlack);
 }
 
 .btn-new-project:hover {
   background-color: #ebf4de;
   font-size: 12px;
+  color: var(--mainBlack);
 }
 
 .fas {
@@ -149,6 +156,7 @@
   float: left;
   cursor: pointer;
   font-size: 13px;
+
 }
 a.btn-back:hover {
   font-weight: 600;
@@ -247,6 +255,7 @@ input[type=text], select {
   display: block;
   text-align: left;
   padding-bottom: 1%;
+  color: var(--mainBlack);
 }
 
 input[type="text"] {
