--- a/square-root/src/pages/User/Projects/projects.css
+++ b/square-root/src/pages/User/Projects/projects.css
@@ -10,10 +10,12 @@
   --mainSpacing: 3px;
   --lightShadow: 2px 5px 3px 0px rgba(0, 0, 0, 0.5);
   --darkShadow: 4px 10px 5px 0px rgba(0, 0, 0, 0.5);
+  background-color: var(--offWhite);
+
 }
 /* COLUMNS */
 
-.row {
+.p-row {
   padding-top: 5%;
   display: flex;
   width: 100%;
@@ -197,6 +199,15 @@ a.btn-back:hover {
   font-weight: 500;
 }
 
+@media screen and (max-width: 1000px){
+  .menu-vertical{
+    width: 100%;
+    height: auto;
+    position: relative;
+    
+  }
+}
+
 /*MODAL*/
 .modal-project {
   background: #fff;
@@ -310,3 +321,89 @@ input[type="text"] {
 .p-title {
   display: inline-block;
 }
+/* DASHBOARD */
+.project_img {
+  border-radius: 10px;
+  padding: 10px;
+  width: 100%;
+}
+
+/* GRID GREENSPACES*/
+.green-container{
+  padding-top: 5%;
+  display: grid;
+  max-width: 1200px;
+  margin: 0 auto;
+  grid-gap: 1rem;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+}
+
+
+/* GRID GREENSPACES*/
+.green-item {
+  padding: 1rem;
+  background-color: white;
+  min-height: 15rem;
+  width: auto;
+  overflow: hidden;
+  border-radius: 5px;
+}
+
+
+.green-item img {
+  display: block;
+  transition: .4s;
+}
+
+.green-item:hover img {
+  padding: 0px;
+  transform: scale(2);
+  transform-origin:50% 50%;
+  cursor: pointer;
+}
+
+.green-item:hover .green-info {
+  background-color: white;
+  opacity: 0.75;
+  padding: 20px;
+  transform: scale(1.3);
+  transform-origin:50% 50%;
+  -webkit-transition: 0.5s ease;
+}
+
+.green-info {
+  text-align: center;
+  font-family: 'Montserrat', sans-serif;
+}
+
+.p-h3{
+  font-size: 20px;
+}
+
+.p-h4{
+  font-size: 15px;
+}
+
+
+/* GREENSPACE */
+
+.greenspace {
+  display: inline-block;
+  vertical-align: middle;
+  float: none;
+  
+  
+}
+
+.gr-cont-top{
+  position: fixed;
+  display: flex;
+  background-color: purple;
+  width: 100%;
+}
+
+.gr-cont-bottom{
+  width: 100%;
+  display: flex;
+}
+
