--- a/square-root/src/pages/User/Projects/projects.css
+++ b/square-root/src/pages/User/Projects/projects.css
@@ -347,33 +347,41 @@ input[type="text"] {
   width: auto;
   overflow: hidden;
   border-radius: 5px;
+  display: block;
+  text-align: center;
 }
 
+#gr-0 h3{
+  font-size: 15px;
+}
+#gr-0 {
+  border: 1px dashed --mainBlack;
+  margin: auto;
+}
 
 .green-item img {
-  display: block;
   transition: .4s;
 }
 
 img[src*="plus"]{
-  width: 30%;
-  height: auto;
-  position: center;
+  width: 20%;
+  text-align: center;
 }
-.green-item:hover img {
-  padding: 0px;
-  transform: scale(2);
+.green-item:hover {
+  transform: scale(1.1);
   transform-origin:50% 50%;
   cursor: pointer;
+  -webkit-transition: 0.5s ease;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1), 0 2px 6px 0 rgba(0, 0, 0, 0.15);
 }
 
 .green-item:hover .green-info {
-  background-color: white;
-  opacity: 0.75;
+
   padding: 20px;
-  transform: scale(1.3);
+  transform: scale(1.1);
   transform-origin:50% 50%;
   -webkit-transition: 0.5s ease;
+
 }
 
 .green-info {
