Finished modal create project

--- a/square-root/src/pages/User/Projects/projects.css
+++ b/square-root/src/pages/User/Projects/projects.css
@@ -1,10 +1,12 @@
 
 :root {
   --primaryColor: #af9a7d;
+  --mainGreen: #8ca68c;
+  --hoverGreen: #CCD7CC;
+  --mainGrey: #3e3d3d;
   --mainWhite: #fff;
   --offWhite: #f7f7f7;
   --mainBlack: #222;
-  --mainGrey: #ececec;
   --darkGrey: #cfcfcf;
   --mainTransition: all 0.3s linear;
   --mainSpacing: 3px;
@@ -123,7 +125,7 @@
 /* BUTTON : NEW PROJECT*/
 .btn-new-project {
   padding: 15px 10px;
-  background-color: #d0e2b0;
+  background-color: var(--mainGreen);
   font-family: "Montserrat", sans-serif;
   font-weight: 500;
   border: none;
@@ -132,10 +134,11 @@
   cursor: pointer;
   font-size: 12px;
  color: var(--mainBlack);
+
 }
 
 .btn-new-project:hover {
-  background-color: #ebf4de;
+  background-color: var(--hoverGreen);
   font-size: 12px;
   color: var(--mainBlack);
 }
@@ -217,10 +220,11 @@ a.btn-back:hover {
   top: 0;
   bottom: 0;
   margin: auto;
-  width: 70%;
-  height: 70%;
+  margin-top: 8%;
+  width: 50%;
+  height: 80%;
   box-shadow: 0 5px 10px 2px rgba(195, 192, 192, 0.5);
-  padding: 20px;
+  padding-top: 20px;
   text-align: center;
 }
 
@@ -255,7 +259,8 @@ input[type=text], select {
 */
 
 .p-inputBox {
-  width: 100%;
+  width: 80%;
+  margin: auto;
 }
 .p-lbl {
   float: left;
@@ -277,6 +282,7 @@ input[type="text"] {
   width: 100%;
   font-family: "Montserrat", sans-serif;
   font-weight: 400px;
+  margin: auto;
 }
 
 /*FLEX BOXES (PostNr & PostSted */
@@ -284,7 +290,7 @@ input[type="text"] {
 .p-flex /* div PostNr & PostSted */ {
   display: flex;
   justify-content: space-between;
-  width: 50%;
+  width: 80%;
 }
 .p-classFlex {
   flex-basis: 48%;
@@ -306,6 +312,27 @@ input[type="text"] {
   box-sizing: border-box;
   width: 100%;
 }
+
+/* BUTTON : CREATE PROJECT */
+.btn-modal-create-p {
+  float: right;
+  margin: auto;
+  width: 40%;
+  background-color: var(--mainGreen);
+  border: none;
+  padding: 15px;
+  cursor: pointer;
+  color: var(--mainBlack);
+  border-radius: 5px;
+  font-weight: 550;
+}
+
+/* BUTTON : HOVER CREATE PROJECT */
+.btn-modal-create-p:hover {
+  background-color: var(--hoverGreen);
+}
+
+
 
 /* BUTTON : CLOSE MODAL*/
 .btn-modal-close {
