Added description to Create Project+ members table

--- a/square-root/src/pages/User/Projects/projects.css
+++ b/square-root/src/pages/User/Projects/projects.css
@@ -95,17 +95,44 @@
 }
 /* end of TITLE */
 
+/*CONTAINER OVER TABLE*/
+.p-container{
+  position: relative;
+  margin-top:5%;
+}
+
+.p-table-title {
+  font-weight: 500;
+  font-size: 20px;
+  display: block;
+  text-align: left;
+  float: left;
+}
+
+.btn-p-invite {
+  background-color: #E5E5E5;
+  border:none;
+  padding:10px;
+  border-radius: 5px;
+  display: block;
+  cursor: pointer;
+  float: right;
+  margin:auto;
+}
+
+.btn-p-invite:hover {
+background-color: #EFEFEF;
+}
+
 /* TABLE */
 .p-table {
   font-family: "Montserrat", sans-serif;
   width: 100%;
   border-collapse: separate;
-  padding-top: 5%;
   color: var(--mainBlack);
   border-spacing: 0 10px;
-  
+  margin-top: 5%;
 }
-
 .p-th {
   font-weight: 500;
   padding: 15px;
@@ -120,6 +147,7 @@
   color: var(--mainBlack);
   font-weight: 400;
 }
+
 /* end of TABLE */
 
 /* BUTTON : NEW PROJECT*/
@@ -198,7 +226,7 @@ a.btn-back:hover {
 }
 
 .menu-vertical a.active {
-  background-color: #d0e2b0;
+  background-color: var(--mainGreen);
   font-weight: 500;
 }
 
@@ -297,7 +325,6 @@ input[type="text"] {
 }
 
 .p-lblFlex {
-  float: left;
   font-family: "Montserrat", sans-serif;
   font-weight: 400px;
   font-size: 20px;
@@ -443,4 +470,9 @@ img[src*="plus"]{
 .greensp-center table {
   margin: auto;
   width: 80%;
+}
+
+/* GREENSPACE */
+.light {
+  font-weight: 400;
 }
