--- a/square-root/src/pages/Customize.css
+++ b/square-root/src/pages/Customize.css
@@ -71,3 +71,135 @@ input{
  
 }
 
+
+/*MODAL*/
+
+.modal-orders {
+    background:purple;
+    display: block;
+    float:right;
+    margin:auto;
+    width: 30%;
+    height: 80%;
+    padding-top: 20px;
+    box-shadow: 0 5px 10px 2px rgba(195, 192, 192, 0.5);
+    
+    
+    /*
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    margin: auto;
+    
+    
+    padding-top: 20px;
+    text-align: center;
+    */
+  }
+  
+  .o-modal-content {
+    display: block;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+    color: black;
+    z-index: 1;
+    align-content: center;
+    padding-right: 5%;
+    padding-left: 5%;
+  }
+  
+  .modal-project form {
+    text-align: center;
+    align-items: initial;
+    justify-content: center;
+  }
+  /*
+  input[type=text], select {
+    width: 70%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+  }
+  */
+  
+  .p-inputBox {
+    width: 80%;
+    margin: auto;
+  }
+  .p-lbl {
+    float: left;
+    font-family: "Montserrat", sans-serif;
+    font-weight: 400px;
+    font-size: 20px;
+    padding-top: 15px;
+    display: block;
+    text-align: left;
+    padding-bottom: 1%;
+    color: var(--mainBlack);
+  }
+  
+  input[type="text"] {
+    padding: 1em;
+    border-radius: 0.3em;
+    border: 1px solid grey;
+    box-sizing: border-box;
+    width: 100%;
+    font-family: "Montserrat", sans-serif;
+    font-weight: 400px;
+    margin: auto;
+  }
+  
+  /*FLEX BOXES (PostNr & PostSted */
+  
+  .p-flex /* div PostNr & PostSted */ {
+    display: flex;
+    justify-content: space-between;
+    width: 80%;
+  }
+  .p-classFlex {
+    flex-basis: 48%;
+  }
+  
+  .p-lblFlex {
+    font-family: "Montserrat", sans-serif;
+    font-weight: 400px;
+    font-size: 20px;
+    display: block;
+    text-align: left;
+    float: left;
+    padding-top: 15px;
+    padding-bottom: 1%;
+  }
+  
+  .p-input-inline /* input PostNr & PostSted */ {
+    box-sizing: border-box;
+    width: 100%;
+  }
+  
+  /* BUTTON : CREATE PROJECT */
+  .orders-btn{
+    float: right;
+    margin: auto;
+    width: 40%;
+    background-color: var(--mainGreen);
+    border: none;
+    padding: 15px;
+    cursor: pointer;
+    color: var(--mainBlack);
+    border-radius: 5px;
+    font-weight: 550;
+  }
+  
+  /* BUTTON : HOVER CREATE PROJECT */
+  .btn-modal-create-p:hover {
+    background-color: var(--hoverGreen);
+  }
+
+  /*END OF MODAL*/
