--- a/square-root/src/pages/Customize.css
+++ b/square-root/src/pages/Customize.css
@@ -74,29 +74,26 @@ input{
 
 /*MODAL*/
 
+
+/* !THIS CHANGES ALL MODALS! */
+.ReactModal__Overlay--after-open{
+  background: rgba(0, 0, 0, 0.5) !important;
+  z-index: 1000;
+  color:black;
+  position: fixed;
+  display:fixed;
+}
+
+/* ORDER MODAL */
 .modal-orders {
-    background:purple;
+    background:white;
     display: block;
     float:right;
     margin:auto;
     width: 30%;
     height: 80%;
     padding-top: 20px;
-    box-shadow: 0 5px 10px 2px rgba(195, 192, 192, 0.5);
-    
-    
-    /*
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    margin: auto;
-    
-    
-    padding-top: 20px;
-    text-align: center;
-    */
+  
   }
   
   .o-modal-content {
@@ -117,17 +114,7 @@ input{
     align-items: initial;
     justify-content: center;
   }
-  /*
-  input[type=text], select {
-    width: 70%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    display: inline-block;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-  }
-  */
+ 
   
   .p-inputBox {
     width: 80%;
