--- a/square-root/src/pages/User/Projects/projects.css
+++ b/square-root/src/pages/User/Projects/projects.css
@@ -241,18 +241,24 @@ a.btn-back:hover {
 
 /*MODAL*/
 .modal-project {
-  background: #fff;
+  background: var(--offWhite);
   position: absolute;
   left: 0;
   right: 0;
   top: 0;
   bottom: 0;
   margin: auto;
-  margin-top: 8%;
   width: 50%;
   height: 80%;
-  padding-top: 20px;
+  padding: 20px;
   text-align: center;
+}
+
+@media screen and (max-width: 600px) {
+  .p-inputBox, .p-lbl, input[type="submit"]{
+    width:100%;
+    margin-top: 0;
+  }
 }
 
 .p-modal-content {
@@ -273,17 +279,7 @@ a.btn-back:hover {
   align-items: initial;
   justify-content: center;
 }
-/*
-input[type=text], select {
-  width: 70%;
-  padding: 12px 20px;
-  margin: 8px 0;
-  display: inline-block;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  box-sizing: border-box;
-}
-*/
+
 
 .p-inputBox {
   width: 80%;
@@ -304,7 +300,7 @@ input[type=text], select {
 input[type="text"] {
   padding: 1em;
   border-radius: 0.3em;
-  border: 1px solid grey;
+  background-color: white;
   box-sizing: border-box;
   width: 100%;
   font-family: "Montserrat", sans-serif;
@@ -339,31 +335,11 @@ input[type="text"] {
   width: 100%;
 }
 
-/* BUTTON : CREATE PROJECT */
-.btn-modal-create-p {
-  float: right;
-  margin: auto;
-  width: 40%;
-  background-color: var(--mainGreen);
-  border: none;
-  padding: 15px;
-  cursor: pointer;
-  color: var(--mainBlack);
-  border-radius: 5px;
-  font-weight: 550;
-}
-
-/* BUTTON : HOVER CREATE PROJECT */
-.btn-modal-create-p:hover {
-  background-color: var(--hoverGreen);
-}
-
-
 
 /* BUTTON : CLOSE MODAL*/
 .btn-modal-close {
   float: right;
-  background-color: white;
+  background-color: var(--offWhite);
   border: none;
   padding: 10px 10px;
   cursor: pointer;
@@ -474,4 +450,44 @@ img[src*="plus"]{
 /* GREENSPACE */
 .light {
   font-weight: 400;
+}
+
+
+/*SETTINGS*/
+
+.settings-container {
+  margin-top:5%;
+  width:60%;
+
+}
+input[type="text"] {
+  background-color: white;
+  border-radius: 5px;
+  border:none;
+}
+
+button[type=submit] {
+  width: 100%;
+  background-color: #3A83F7;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 15px;
+  font-weight: 550;
+}
+button[type=submit]:hover{
+  background-color: #6BA3FA;
+}
+
+
+.settings-lbl {
+ padding:10px;
+}
+
+.settings-p{
+  padding: 2px;
+  font-size: 20px;
 }
