--- a/square-root/src/pages/Customize.css
+++ b/square-root/src/pages/Customize.css
@@ -1,4 +1,4 @@
-p{
+.p-info{
     padding-bottom: 1%;
     padding-left: 7%;
 }
@@ -10,7 +10,7 @@ label{
     display:block;
     
 }
-h5{
+.header{
     padding-left: 7%;
 }
 
@@ -60,7 +60,7 @@ input{
 }
 .check{
     position: absolute;
-    top: 30%;
+    top: 22%;
   left: 49%;
 }
 .orders{
