--- a/square-root/src/pages/Customize.css
+++ b/square-root/src/pages/Customize.css
@@ -99,6 +99,12 @@ input{
   -webkit-transition: 0.2s ease;
 }
 
+body.ReactModal__Body--open{
+  overflow: hidden;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+}
 /* ORDER MODAL */
 .modal-orders {
     background:white;
