Added buttons for greenspaces

--- a/square-root/src/pages/User/Projects/projects.css
+++ b/square-root/src/pages/User/Projects/projects.css
@@ -357,6 +357,27 @@ input[type="text"] {
   width: 100%;
 }
 
+/*GREENSPACES*/
+
+/* BUTTON : NEW GREENSPACE*/
+.btn-new-greenspace{
+  float:right;
+  padding: 15px 10px;
+  font-weight: 500;
+  border: 1px solid var(--mainGreen);
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 12px;
+  color: var(--mainBlack);
+  vertical-align: middle;
+}
+
+.btn-new-greenspace:hover {
+  background-color: var(--hoverGreen);
+  font-size: 12px;
+  color: var(--mainBlack);
+}
+
 /* GRID GREENSPACES*/
 .green-container{
   padding-top: 5%;
@@ -368,7 +389,6 @@ input[type="text"] {
 }
 
 
-/* GRID GREENSPACES*/
 .green-item {
   padding: 1rem;
   background-color: white;
@@ -380,13 +400,6 @@ input[type="text"] {
   text-align: center;
 }
 
-#gr-0 h3{
-  font-size: 15px;
-}
-#gr-0 {
-  border: 1px dashed #BEBBBB;
-  
-}
 
 .green-item img {
   transition: .4s;
