--- a/square-root/src/pages/User/Projects/projects.css
+++ b/square-root/src/pages/User/Projects/projects.css
@@ -357,6 +357,70 @@ input[type="text"] {
   width: 100%;
 }
 
+
+/*DASHBOARD MODAL */
+
+.modal-dashboard {
+  background: var(--offWhite);
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  width: 60%;
+  height: 80%;
+  padding-top: 3%;
+  overflow: scroll;
+}
+
+
+.d-modal-content {
+  display: block;
+  flex-direction: column;
+  font-size: calc(10px + 2vmin);
+  color: black;
+  z-index: 1;
+  padding-right: 5%;
+  padding-left: 5%;
+}
+
+/* TABLE */
+.d-table {
+  font-family: "Montserrat", sans-serif;
+  border-collapse: separate;
+  color: var(--mainBlack);
+  border-spacing: 0 10px;
+  margin-top: 5%;
+}
+
+.d-table td{
+  vertical-align: middle;
+  font-size: 70%;
+}
+.d-th {
+  font-weight: 500;
+  padding: 15px;
+  text-align: left;
+  color: var(--mainBlack);
+  font-size: 70%;
+}
+
+.d-td {
+  background-color: #ffffff;
+  padding: 15px;
+  color: var(--mainBlack);
+  font-weight: 400;
+  font-size: 60%;
+  height:auto;
+}
+
+td.d-modal-img {
+  width:20%;
+  height:auto;
+  margin:0;
+
+}
 /*GREENSPACES*/
 
 /* BUTTON : NEW GREENSPACE*/
