--- a/square-root/src/pages/User/Projects/projects.css
+++ b/square-root/src/pages/User/Projects/projects.css
@@ -253,6 +253,7 @@ a.btn-back:hover {
   text-align: center;
 }
 
+
 @media screen and (max-width: 600px) {
   .p-inputBox, .p-lbl, input[type="submit"]{
     width:100%;
@@ -298,14 +299,15 @@ a.btn-back:hover {
 
 input[type="text"] {
   padding: 1em;
-  border-radius: 0.3em;
   background-color: white;
   box-sizing: border-box;
   width: 100%;
   font-family: "Montserrat", sans-serif;
   font-weight: 400px;
   margin: auto;
-}
+  border-radius: 5px;
+  border:1px solid lightgray;
+  }
 
 /*FLEX BOXES (PostNr & PostSted */
 
@@ -546,11 +548,7 @@ img[src*="plus"]{
   width:60%;
 
 }
-input[type="text"] {
-  background-color: white;
-  border-radius: 5px;
-  border:none;
-}
+
 
 button[type=submit] {
   width: 100%;
@@ -577,3 +575,54 @@ button[type=submit]:hover{
   padding: 2px;
   font-size: 20px;
 }
+
+/*ACCOUNT*/ 
+
+.acc-container {
+  margin-top:5%;
+  width:50%;
+  margin-left: 10%;
+}
+
+.acc-title {
+  padding-top: 5%;
+  padding-bottom: 5%;
+  width: 100%;
+  height: 100%;
+  color: var(--mainBlack);
+}
+
+input[type="number"], select{
+width: 38%;
+background-color: white;
+  border-radius: 5px;
+  border:1px solid lightgray;
+  padding: 1em;
+  border-radius: 0.3em;
+  background-color: white;
+  box-sizing: border-box;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400px;
+  margin: auto;
+  
+}
+input[name="email"]{
+  width:60%;
+}
+
+button[name="btn-account"]{
+  width:60%
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+select {
+  color: gray;
+  -webkit-appearance: none;
+}
+
+
