--- a/square-root/src/pages/User/Projects/projects.css
+++ b/square-root/src/pages/User/Projects/projects.css
@@ -482,8 +482,8 @@ img[src*="plus"]{
   text-align: center;
 }
 .green-item:hover {
-  transform: scale(1.1);
-  transform-origin:50% 50%;
+  transform: scale(1.02);
+ 
   cursor: pointer;
   -webkit-transition: 0.5s ease;
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1), 0 2px 6px 0 rgba(0, 0, 0, 0.15);
@@ -491,14 +491,18 @@ img[src*="plus"]{
 
 .green-item:hover .green-info {
   padding: 20px;
-  margin-top:10px;
-  transform: scale(1.1);
+  margin-top:20px;
+  transform: scale(1.2);
   transform-origin:50% 50%;
   -webkit-transition: 0.5s ease;
+  
 }
 
 .green-item:hover img {
-  transform: scale(1.4);
+  transform: scale(1.5);
+  transform-origin:50% 50%;
+  -webkit-transition: 0.5s ease;
+
 }
 
 .green-info {
