--- a/square-root/src/pages/Partner.css
+++ b/square-root/src/pages/Partner.css
@@ -1,26 +1,45 @@
 .float-container-partner {
-    padding: 1%;
-    height: 500px;
+    padding: 2%;
+    height: 550px;
     background-color: #8ca68c;
     margin-left:5%;
     margin-right:5%;
 }
 
 .float-child {
-    width: 50%;
+
     float: left;
     padding: 0%;
-    height: 100%;
+    max-width: 960px;
     
 }
+
+.background-white
+{
+    background-color: white;
+    padding:2%;
+}
+
+.partner-h1{
+    font-size: 35px;
+    font-weight: bold;
+}
+
 .about{
     width: 100%;
     height: 100%;
     
 }
-.about-image{
+.about img{
     height: 100%;
-    width: 100%;
+}
+
+.width-40{
+    width:40%;
+}
+
+.width-60{
+    width:60%;
 }
 .about-name{
     font-size: 50px;
@@ -30,13 +49,95 @@
     top: 30%;
     left: 10%;
 }
-.about-desc{
-    font-size: 20px;
+.partner-p{
+    font-size: 18px;
     color: black;
-    padding: 3%;
-    width: 90%;
-
 }
+
+.partner-lbl {
+    margin-bottom:20px;
+    
+}
+
+input[name="partner-input"]{
+    border:none;
+    border-radius: 0;
+    border-bottom:1px solid grey
+}
+
+a[href="terms-and-conditions"]{
+    color:black;
+}
+
+/* The checkbox container */
+.checkbox-container {
+  display: block;
+  position: relative;
+  padding-left: 35px;
+  margin-bottom: 12px;
+  cursor: pointer;
+  font-size: 15px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+.checkbox-container input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+
+
+.checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 25px;
+  width: 25px;
+  border: 1px solid #799779;
+}
+
+
+
+
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+
+.checkbox-container input:checked ~ .checkmark:after {
+  display: block;
+}
+
+
+.checkbox-container .checkmark:after {
+  left: 8px;
+  top: 1px;
+  width: 8px;
+  height: 18px;
+  border: 3px solid #799779;
+  border-width: 0 3px 3px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
+.btn-partner{
+    width:20%;
+    padding: 10px;
+    background-color: white;
+    border-color:1px solid #799779;
+    border-radius: 3px;
+    float:right;
+    cursor: pointer;
+}
+
 .about-inspo{
     font-weight: bold;
     font-size: 30px;
