--- a/square-root/src/App.css
+++ b/square-root/src/App.css
@@ -2,6 +2,7 @@
 @import "@fortawesome/fontawesome-free/css/all.min.css";
 @import "./components/navbar/Dropdown.css";
 @import "./components/Footer.css";
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 :root {
   --primaryColor: #af9a7d;
@@ -22,7 +23,9 @@
   --border: 1px solid #474a4d;
   --border-radius: 8px;
   --speed: 500ms;
+ 
 }
+
 /* globals */
 body {
   padding-top: 10px;
@@ -31,7 +34,7 @@ body {
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Poppins', sans-serif;
 
   /*font-family: Verdana, Geneva, Tahoma, sans-serif;
   line-height: 1.4;*/
