--- a/square-root/src/pages/User/Projects/projects.css
+++ b/square-root/src/pages/User/Projects/projects.css
@@ -79,7 +79,7 @@
 
 .p-h1 {
   display: inline;
-  font-family: "Montserrat", sans-serif;
+
   font-weight: 400;
   font-size: x-large;
   color: var(--mainBlack);
@@ -87,7 +87,7 @@
 
 .p-h2 {
   display: inline;
-  font-family: "Montserrat", sans-serif;
+
   font-weight: 400;
   font-size: medium;
   color: var(--mainBlack);
@@ -125,7 +125,7 @@ background-color: #EFEFEF;
 
 /* TABLE */
 .p-table {
-  font-family: "Montserrat", sans-serif;
+
   width: 100%;
   border-collapse: separate;
   color: var(--mainBlack);
@@ -152,16 +152,14 @@ background-color: #EFEFEF;
 /* BUTTON : NEW PROJECT*/
 .btn-new-project {
   padding: 15px 10px;
-  background-color: var(--mainGreen);
-  font-family: "Montserrat", sans-serif;
   font-weight: 500;
   border: none;
   border-radius: 5px;
   float: right;
   cursor: pointer;
   font-size: 12px;
- color: var(--mainBlack);
-
+  color: var(--mainBlack);
+  background-color: var(--mainGreen);
 }
 
 .btn-new-project:hover {
@@ -180,7 +178,7 @@ background-color: #EFEFEF;
 .btn-back {
   padding: 15px 10px;
   background-color: var(--offWhite);
-  font-family: "Montserrat", sans-serif;
+
   font-weight: 400;
   color: black;
   border: none;
@@ -206,7 +204,6 @@ a.btn-back:hover {
 .menu-vertical {
   width: 200px;
   float: left;
-  font-family: "Montserrat", sans-serif;
   border-radius: 5px;
   margin-top: 20%;
 }
@@ -248,7 +245,7 @@ a.btn-back:hover {
   bottom: 0;
   margin: auto;
   width: 50%;
-  height: 80%;
+  max-height: 600px;
   padding: 20px;
   text-align: center;
 }
@@ -287,7 +284,7 @@ a.btn-back:hover {
 }
 .p-lbl {
   float: left;
-  font-family: "Montserrat", sans-serif;
+
   font-weight: 400px;
   font-size: 20px;
   padding-top: 15px;
@@ -302,7 +299,6 @@ input[type="text"] {
   background-color: white;
   box-sizing: border-box;
   width: 100%;
-  font-family: "Montserrat", sans-serif;
   font-weight: 400px;
   margin: auto;
   border-radius: 5px;
@@ -321,7 +317,6 @@ input[type="text"] {
 }
 
 .p-lblFlex {
-  font-family: "Montserrat", sans-serif;
   font-weight: 400px;
   font-size: 20px;
   display: block;
@@ -395,7 +390,6 @@ input[type="text"] {
 
 /* TABLE */
 .d-table {
-  font-family: "Montserrat", sans-serif;
   border-collapse: separate;
   color: var(--mainBlack);
   border-spacing: 0 10px;
@@ -507,7 +501,6 @@ img[src*="plus"]{
 
 .green-info {
   text-align: center;
-  font-family: 'Montserrat', sans-serif;
 }
 
 .p-h3{
@@ -605,7 +598,6 @@ background-color: white;
   border-radius: 0.3em;
   background-color: white;
   box-sizing: border-box;
-  font-family: "Montserrat", sans-serif;
   font-weight: 400px;
   margin: auto;
   
