--- a/square-root/src/components/navbar/Dropdown.css
+++ b/square-root/src/components/navbar/Dropdown.css
@@ -1,22 +1,14 @@
 :root {
-  --primaryColor: #af9a7d;
-  --mainWhite: #fff;
   --offWhite: #f7f7f7;
   --mainBlack: #222;
-  --mainGrey: #bababa;
-  --darkGrey: #cfcfcf;
-  --mainTransition: all 0.3s linear;
-  --mainSpacing: 3px;
-  --lightShadow: 2px 5px 3px 0px rgba(0, 0, 0, 0.5);
-  --darkShadow: 4px 10px 5px 0px rgba(0, 0, 0, 0.5);
   --navbarBack: #f9f9f9;
   --bg: #242526;
-  --bg-accent: rgba(255, 255, 255, 0.9);
   --text-color: #dadce1;
   --nav-size: 60px;
   --border: 1px solid #474a4d;
   --border-radius: 8px;
   --speed: 500ms;
+  --icon-gray: #bababa
 }
 
 ul {
@@ -72,6 +64,7 @@ a {
   --button-size: calc(var(--nav-size) * 0.5);
   width: var(--button-size);
   height: var(--button-size);
+  background-color: var(--icon-gray);
   border-radius: 50%;
   padding: 5px;
   margin: 2px;
