--- a/square-root/src/App.css
+++ b/square-root/src/App.css
@@ -35,9 +35,6 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-family: 'Poppins', sans-serif;
-
-  /*font-family: Verdana, Geneva, Tahoma, sans-serif;
-  line-height: 1.4;*/
 }
 
 .btn-primary {
@@ -57,9 +54,16 @@ body {
   color: var(--primaryColor);
 }
 .loading {
-  text-transform: capitalize;
-  text-align: center;
-  margin-top: 3rem;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: white;
+  z-index: 999;
 }
 .error {
   text-align: center;
