--- a/square-root/src/components/navbar/Dropdown.css
+++ b/square-root/src/components/navbar/Dropdown.css
@@ -8,7 +8,7 @@
   --border: 1px solid #474a4d;
   --border-radius: 8px;
   --speed: 500ms;
-  --icon-gray: #bababa
+  --icon-gray: #bababa;
 }
 
 ul {
