plant context to get one plant

--- a/square-root/src/pages/Customize.css
+++ b/square-root/src/pages/Customize.css
@@ -1,99 +1,72 @@
-
-
-.pf{
-    display:block;
+.pf {
+  display: block;
 }
-label{
-    display:block;
-    
+label {
+  display: block;
 }
 
-.customize-header{
-  top:13%;
-  left:45%;
-  position:absolute;
+.customize-header {
+  top: 13%;
+  left: 45%;
+  position: absolute;
 }
-.btn-white{
-    background-color:white;
-    position:absolute;
-    top:13%;
-  }
+.btn-white {
+  background-color: white;
+  position: absolute;
+  top: 13%;
+}
 
 .btn-orders {
   background-color: white;
-  border:none;
-  padding:10px;
+  border: none;
+  padding: 10px;
   border-radius: 5px;
   cursor: pointer;
-  float:right;
+  float: right;
   display: inline-flex;
-  position:absolute;
-  top:13%;
-  right:0;
+  position: absolute;
+  top: 13%;
+  right: 0;
 }
 
-
-.cust-concept-title{
-  position:relative;
-  left:5%;
-  width:100%;
-  margin-top:8%;
-}
-
-.cust-concept-title h1{
-  font-size:50px;
-  font-weight:bold;
-}
-
-.cust-concept-title p{
-    width:60%;
-    padding-top:0;
-}
-
-.filters{
-  height: auto; 
+.filters {
+  height: auto;
   width: 18%;
-  z-index: 1; 
-  top: 50%; 
+  z-index: 1;
+  top: 50%;
   left: 0%;
   padding-left: 2.5%;
-  background-color: var(--offWhite); 
-  position:absolute;
+  background-color: var(--offWhite);
+  position: absolute;
   padding-top: 20px;
 }
 
-input{
-    margin:2%;
-
+input {
+  margin: 2%;
 }
-.pn{
-    display: flex;
-    flex-wrap: wrap;
-    width: 80%;
-    margin-left: 20%;
-    align-items: center;
-
+.pn {
+  display: flex;
+  flex-wrap: wrap;
+  width: 80%;
+  margin-left: 20%;
+  align-items: center;
 }
-.plants{
-     /* Same as the width of the sidebar */
-    padding: 40px;
-    height: 30%;
-    flex-wrap: wrap;
-    
-    
+.plants {
+  /* Same as the width of the sidebar */
+  padding: 40px;
+  height: 30%;
+  flex-wrap: wrap;
 }
-.plant{
-    height: 200px;
-    
+.plant {
+  height: 200px;
 }
-.name{
-    padding-left: 27%;
-    align-items: center;
-    
+.name {
+  padding-left: 27%;
+  align-items: center;
 }
 
 /*CHECKBOXES*/
-.checkbox-container-float-right{
+.checkbox-container-float-right {
   display: block;
   position: relative;
   padding-left: 35px;
@@ -104,7 +77,7 @@ input{
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  float:right;
+  float: right;
 }
 
 .checkbox-container-float-right input {
@@ -115,12 +88,11 @@ input{
   width: 0;
 }
 
-.checkbox-container-float-right:hover{
-background-color:purple;
+.checkbox-container-float-right:hover {
+  background-color: purple;
 }
 
-
-.checkmark-is-round{
+.checkmark-is-round {
   border-radius: 50%;
   position: absolute;
   top: 0;
@@ -136,11 +108,9 @@ background-color:purple;
   display: none;
 }
 
-
 .checkbox-container-float-right input:checked ~ .checkmark-is-round:after {
   display: block;
 }
-
 
 .checkbox-container-float-right .checkmark-is-round:after {
   left: 15px;
@@ -152,150 +122,135 @@ background-color:purple;
   -webkit-transform: rotate(45deg);
   -ms-transform: rotate(45deg);
   transform: rotate(45deg);
-  
 }
 
 /*END OF CHECKBOXES*/
 
-
-.orders{
-    position: absolute;
-    top: 18%;
+.orders {
+  position: absolute;
+  top: 18%;
   right: 5%;
   font-size: 20px;
- 
 }
-
-
 
 .order-items {
   font-weight: 600;
   font-size: 15px;
 }
 
-
 /*MODAL*/
 /* !THIS CHANGES ALL MODALS! */
-.ReactModal__Overlay--after-open{
+.ReactModal__Overlay--after-open {
   background: rgba(0, 0, 0, 0.5) !important;
   z-index: 1000;
   position: fixed;
+  transition: ease;
   -webkit-transition: 0.2s ease;
 }
 
-body.ReactModal__Body--open{
+body.ReactModal__Body--open {
   overflow: hidden;
   position: fixed;
   width: 100%;
   height: 100%;
 }
 
-
 /* ORDER MODAL */
 .modal-orders {
-    background:white;
-    display: block;
-    margin:auto;
-    width: 30%;
-    height: 80%;
-    position:absolute;
-    top: 0px;
-    right:0px;
-    overflow: auto;
-  }
-  
-  .o-modal-content {
-    color: black;
-  }
+  background: white;
+  display: block;
+  margin: auto;
+  width: 30%;
+  height: 80%;
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  overflow: auto;
+}
 
-  .o-h1 {
-    font-size: 20px;
-    padding:30px;
-  }
+.o-modal-content {
+  color: black;
+}
 
-  .o-modal-container {
-    padding:5%;
-    margin:auto;
-    position:relative;  
-  }
+.o-h1 {
+  font-size: 20px;
+  padding: 30px;
+}
 
-  
+.o-modal-container {
+  padding: 5%;
+  margin: auto;
+  position: relative;
+}
 
-  /*TABLE IN MODAL */
+/*TABLE IN MODAL */
 
-  .modal-list {
-    width:100%;
-    overflow: scroll;
-  }
+.modal-list {
+  width: 100%;
+  overflow: scroll;
+}
 
-  .modal-list tr{
-    border-bottom: 1px solid grey;
-    border-collapse: collapse;
-  }
+.modal-list tr {
+  border-bottom: 1px solid grey;
+  border-collapse: collapse;
+}
 
-  .modal-list td{
-    vertical-align: middle;
-    left: 50px;
-  
-  }
+.modal-list td {
+  vertical-align: middle;
+  left: 50px;
+}
 
-  td.o-modal-img {
-    width:20%;
+td.o-modal-img {
+  width: 20%;
+}
+td.o-modal-name {
+  width: auto;
+}
 
-  }
-  td.o-modal-name{
-    width:auto;
-  }
+td.o-modal-remove {
+  width: 20%;
+}
 
-  td.o-modal-remove{
-    width:20%;
-  }
+/* BUTTONS FOOTER IN MODAL */
 
-  /* BUTTONS FOOTER IN MODAL */
+.modal-btns-footer {
+  background-color: #f4f4f4;
+  position: sticky;
+  bottom: 0;
+  padding: 20px;
+  width: 100%;
+  text-align: center;
+}
+.orders-btn-close {
+  margin: auto;
+  width: 20%;
+  background-color: #e5e5e5;
+  border: none;
+  padding: 15px;
+  cursor: pointer;
+  color: var(--mainBlack);
+  border-radius: 5px;
+  font-weight: 400;
+}
 
-  .modal-btns-footer {
-    background-color: #F4F4F4;
-    position:sticky;
-    bottom:0;
-    padding:20px;
-    width:100%;
-    text-align: center;
-  
-  
-  }
-  .orders-btn-close{
-    margin: auto;
-    width: 20%;
-    background-color: #E5E5E5;
-    border: none;
-    padding: 15px;
-    cursor: pointer;
-    color: var(--mainBlack);
-    border-radius: 5px;
-    font-weight: 400;
-  }
-  
 .orders-btn-save {
-    margin-left: 10px;
-    width: 40%;
-    background-color: #3A83F7;
-    border: none;
-    padding: 15px;
-    cursor: pointer;
-    color: white;
-    border-radius: 5px;
-    font-weight: 600;
-    
+  margin-left: 10px;
+  width: 40%;
+  background-color: #3a83f7;
+  border: none;
+  padding: 15px;
+  cursor: pointer;
+  color: white;
+  border-radius: 5px;
+  font-weight: 600;
 }
 
 .orders-btn-save:hover {
-  background-color: #6BA3FA;
+  background-color: #6ba3fa;
 }
 
 .orders-btn-close:hover {
-  background-color: #BEBBBB;
+  background-color: #bebbbb;
 }
 
-  /*END OF MODAL*/
-
-  
+/*END OF MODAL*/
