--- a/square-root/src/App.css
+++ b/square-root/src/App.css
@@ -2,7 +2,7 @@
 @import "@fortawesome/fontawesome-free/css/all.min.css";
 @import "./components/navbar/Dropdown.css";
 @import "./components/Footer.css";
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 :root {
   --primaryColor: #af9a7d;
@@ -23,7 +23,6 @@
   --border: 1px solid #474a4d;
   --border-radius: 8px;
   --speed: 500ms;
- 
 }
 
 /* globals */
@@ -34,7 +33,7 @@ body {
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
 .btn-primary {
@@ -276,6 +275,44 @@ body {
   z-index: 100;
 }
 /*end of backdrop */
+/* Titles */
+/* customize + plants */
+.cust-concept-title {
+  position: relative;
+  left: 5%;
+  width: 100%;
+  margin-top: 8%;
+}
+
+.cust-concept-title h1 {
+  font-size: 50px;
+  font-weight: bold;
+  text-transform: capitalize;
+}
+
+.cust-concept-title p {
+  width: 60%;
+  padding-top: 0;
+}
+/* how it works */
+.how-title {
+  position: relative;
+  left: 42%;
+  padding-top: 2%;
+  font-weight: bold;
+  font-size: 30px;
+  text-transform: capitalize;
+}
+
+.how-desc {
+  position: relative;
+  left: 24%;
+  padding-top: 1%;
+  background-color: white;
+  font-size: 20px;
+  width: 50%;
+  text-align: center;
+}
 /* Hero */
 /*.defaultHero,
 .plantsHero {
@@ -359,4 +396,3 @@ body {
 /* end of Title */
 
 /*Project Space*/
-
