--- a/square-root/src/App.sass
+++ b/square-root/src/App.sass
@@ -11,6 +11,7 @@ $brown: #757763
 $beige-light: #d0d1cd
 $beige-lighter: #eff0eb
 $white: #f9f9f9
+$darker: #242526
 
 // Update Bulma's global variables
 $family-sans-serif: 'Nunito', sans-serif
@@ -21,7 +22,7 @@ $white: $white
 $link: $purple
 $widescreen-enabled: false
 $fullhd-enabled: false
-
+$dark: $darker
 
 // Update some of Bulma's component variables
 $body-background-color: $purple
